--- a/Desktop/wordpress/docker-compose.yml
+++ b/Desktop/wordpress/docker-compose.yml
@@ -1,5 +1,17 @@
 version: "3.8"
 services:
+  nginx:
+    container_name: reverse_proxy
+    image: nginx:1.26-alpine
+    ports:
+     - "80:80"
+    volumes:
+     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+     - wordpress
+    networks:
+     - wp_network
+
   wordpress:
     container_name: wordpress
     image: wordpress:6-php8.2-apache
@@ -12,8 +24,6 @@ services:
      - wp_data:/var/www/html
     networks:
      - wp_network
-    ports:
-     - "8080:80"
 
   db:
     container_name: db
