--- a/Desktop/wordpress/docker-compose.yml
+++ b/Desktop/wordpress/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     container_name: wordpress
     image: wordpress:6-php8.2-apache
     depends_on:
-     - db
+      db:
+         condition: service_healthy
     restart: unless-stopped
     env_file:
      - .env
@@ -31,6 +32,12 @@ services:
     restart: unless-stopped
     env_file:
      - .env
+    healthcheck:
+      test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
+      start_period: 20s
+      interval: 10s
+      timeout: 5s
+      retries: 5
     volumes:
      - db_data:/var/lib/mysql
     networks:
